# SFML_Template

./: Readme.md  build.gradle  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Test.cpp  Test.h  main.cpp
sfml/: include  lib
